fix responsiveness on small screens for / and /play

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,18 +1,18 @@
 @import "tailwindcss";
 
 html {
-    min-height: 100vh;
-    min-width: 100vh;
+    /* min-height: 100vh; */
+    /* min-width: 100vh; */
 }
 
 #app {
-    min-height: 100vh;
-    min-width: 100vh;
+    /* min-height: 100vh; */
+    /* min-width: 100vh; */
 }
 
 body {
-    max-height: 100%;
-    max-width: 100%;
+    /* min-height: 100%; */
+    /* min-width: 100%; */
     @apply m-0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -24,4 +24,21 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
+}
+
+@media (min-width: 500px) {
+    html {
+        min-height: 100vh;
+        min-width: 100vh;
+    }
+
+    #app {
+        min-height: 100vh;
+        max-height: 100vh;
+    }
+
+    body {
+        min-height: 100%;
+        min-width: 100%;
+    }
 }
